# RevNest

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  train.py
artifacts/: preprocessor.pkl
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
frontend/: README.md  index.html
frontend/css/: style.css
frontend/js/: app.js
models/: airbnb_model.pkl  airbnb_model_metadata.json  catboost_model_metadata.json  random_forest_model_metadata.json  xgboost_model.pkl  xgboost_model_metadata.json
src/: api.py  data_loader.py  model.py
